Formatting all the pages to be consistent with sidebar panel, added batch adjustment updates for median correlation plot also
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@117603 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/reports/batchQC.html
+++ b/inst/reports/batchQC.html
@@ -98,7 +98,7 @@ $endfor$
    <!-- FOOTER  -->
    <div id="footer">
 		<div class="container">
-			<p class="muted credit">Questions? Kindly contact <a href="mailto:mani2012@bu.edu?subject=BatchQC question"><code>mani2012 [at] bu.edu</code></a> using the subject heading <code>BatchQC question</code>. </p>
+			<p class="muted credit">Questions? Kindly contact <code>Solaiappan Manimaran</code> <a href="mailto:mani2012@bu.edu?subject=BatchQC question"><code>mani2012 [at] bu.edu</code></a> using the subject heading <code>BatchQC question</code>. </p>
 		</div>
 	</div>
 
